--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			.text{width: 95%;font-size: 15px;text-align: justify;padding: 10px 0px 0px 0px;}
 			.subheading{position: relative; width: 98%;text-align: left;font-size: 20px;font-weight: bold;}
 		</style>
-		<title>Report</title>
+		<title>Gender Classification</title>
 	</head>
 <body>
 	<div>
